[package]
name = "headers-content-md5"
description = "typed Content-MD5 header"
version = "0.1.0"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/sunsided/hyperium-headers-content-md5"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
keywords = ["http", "headers", "hyper", "hyperium"]
categories = ["web-programming"]
edition = "2021"

[dependencies]
base64 = "0.21.2"
headers = "0.3.8"
http = "0.2.0"
